Fix alignment of prices

--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ footer a:hover {
     margin:0 auto;
     border-spacing: 0.75em;
 }
-.price-table tr:first-child {
+.price-table tr td:first-child {
     text-align: right;
 }
 .pricing p {
@@ -241,4 +241,14 @@ footer a:hover {
     display:flex;
     justify-content: space-between;
     flex-wrap: wrap;
+}
+
+.sponsorship.blue {
+    background-color: var(--color-primary);
+    color:var(--color-light);
+}
+
+.sponsorship.green {
+    background-color: var(--color-secondary);
+    color:var(--color-light);
 }
